WIP: add tests, although problems locally

--- a/recipes/asv/meta.yaml
+++ b/recipes/asv/meta.yaml
@@ -20,15 +20,20 @@ requirements:
     - python
     - setuptools
     - sphinx
-    - sphinx_bootstrap_theme
+    - sphinx-bootstrap-theme
     - six
   run:
     - python
     - six
 
 test:
-  imports:
-    - asv
+  requires:
+    - pytest
+  source_files:
+    - test/
+  commands:
+    - cd test
+    - py.test
 
 about:
   home: https://github.com/spacetelescope/asv
