--- a/recipes/pyFAI/meta.yaml
+++ b/recipes/pyFAI/meta.yaml
@@ -14,7 +14,7 @@ source:
 build:
   number: 0
   script: python setup.py install --record record.txt
-  skip: True  # [win]
+  skip: True  # [not linux]
 
 requirements:
   build:
